--- a/index.html
+++ b/index.html
@@ -95,8 +95,9 @@
             Hello! I Am <br /><span class="c-orange">Pawan Kumavat</span>
           </h2>
           <p class="text-muted">
-            I'm A Web Developer having 5 years of experience in expertise of
-            creating website with fully responsive Also with backend part too.
+            Hey! I'm Sachin, a Computer Science Engineering graduate with a strong passion for UI/UX design. 
+            I've completed a front-end web development internship through Udemy and have worked on various projects, 
+            including some for IT companies, to build my skills and experience.
           </p>
           <button class="c-btn h-btn mt-3 py-3 px-5 rounded-pill">
             Hire Me
